# proteintraitsmech

./: .gitignore  CLAUDE.md  NEXT_TASKS.md  NEXT_TASK_peptides.md  README.md  download.yaml  justfile  pyproject.toml
data/: sources.yaml
docs/: _config.yml  browse.css  browse.html  browse.js  example.md  index.html  index.md  map.html  schema.md  theme-toggle.js
prompts/: schema-review.md
research/: axis-split-review-1.md  causal-graphs-round1.md  causal-graphs-round10.md  causal-graphs-round11.md  causal-graphs-round2.md  causal-graphs-round3.md  causal-graphs-round4.md  causal-graphs-round5.md  causal-graphs-round6.md  causal-graphs-round7.md  causal-graphs-round8.md  causal-graphs-round9.md  chemistry-integration-round1.md  cross-source-comparison-review-1.md  definition-state-review.md  entry-merge-methods-round1.md  equivalence-cutoffs-evolution.md  equivalence-cutoffs-function.md  equivalence-cutoffs-sequence-structure.md  equivalence-cutoffs-sequence.md  equivalence-cutoffs-structure.md  function-chemistry-sources-round3.md  methods-recipes-tools-round1.md  pacmap-parameters-rationale.md  pathway-go-grounding-notes.md  protein-trait-sources-round1.md  protein-trait-sources-round2.md  protein-trait-sources-round3.md  record-sample-review-1-appendix-function.md  record-sample-review-1-appendix-mixed-evolution.md  record-sample-review-1-appendix-one-per-cell.md  record-sample-review-1-appendix-sequence.md  record-sample-review-1-appendix-structure.md  record-sample-review-1.md  representation-content-rendering-review-1.md  schema-hierarchy-review-1.md  (+14 more)
(+588367 files in other folders)
