[project]
name = "proteintraitsmech"
version = "0.1.0"
description = "Knowledge base of protein traits, functions, and mechanisms — curated one YAML per trait with evidence-backed causal graphs"
authors = [
    {name = "ProteinTraitsMech Contributors"}
]
readme = "README.md"
license = {text = "CC0-1.0"}
requires-python = ">=3.10"
keywords = [
    "protein",
    "trait",
    "function",
    "ontology",
    "knowledge graph",
    "linkml",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "linkml>=1.10.0",
    "linkml-runtime>=1.7.0",
    "oaklib>=0.5.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "deep-research-client[cyberian]>=0.2.4; python_version >= '3.12'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteintraitsmech"]

[tool.ruff]
line-length = 100
target-version = "py310"
